# photo-archiver

./: .dockerignore  .gitignore  .impeccable.md  Dockerfile  LICENSE.md  docker-compose.yml  index.html  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  scanner.py
backend/app/routers/: duplicates.py  images.py  processing.py  settings.py  ws.py
backend/app/services/: auto_orienter.py  color_restorer.py  cropper.py  deskewer.py  duplicates.py  dust_remover.py  enhancer.py  line_remover.py  organizer.py  orienter.py  pipeline.py  rotator.py
backend/app/utils/: exif.py  thumbnails.py
docs/superpowers/specs/: 2026-03-21-rotation-design.md  2026-03-21-scan-quality-design.md
frontend/: package.json  vite.config.ts
frontend/src/lib/: api.ts  types.ts  ws.ts
frontend/src/lib/components/: BeforeAfter.svelte  FilterBar.svelte  ImageCard.svelte  ImageDetail.svelte  ImageGrid.svelte  ProcessingPanel.svelte  ProgressTracker.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/duplicates/: +page.svelte
frontend/src/routes/help/: +page.svelte
frontend/src/routes/image/[id]/: +page.svelte  +page.ts
frontend/src/routes/processing/: +page.svelte
frontend/src/routes/settings/: +page.svelte
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  exif.rs  hash.rs  imaging.rs  lib.rs  ml.rs  models.rs  organize.rs  pipeline.rs  scan.rs  snapshots.rs  state.rs  thumbnails.rs
src/lib/: StageBar.svelte  Titlebar.svelte  api.ts  store.svelte.ts  thumbs.ts  types.ts  workspace.ts
src/lib/panels/: Duplicates.svelte  Filters.svelte  ImageCard.svelte  Library.svelte  Placeholder.svelte  Processing.svelte  Settings.svelte  Tasks.svelte  Viewer.svelte
src/lib/ui/: Badge.svelte  Icon.svelte  StepCard.svelte
