[project]
name = "photo-archiver-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite",
    "pillow",
    "pydantic-settings",
    "python-multipart",
    "realesrgan>=0.3.0",
    "gfpgan>=1.3.8",
    "opencv-python-headless>=4.13.0.92",
    "imagehash>=4.3.1",
]
