[package]
name = "photo-archiver"
version = "0.2.0"
description = "Desktop app for restoring and organizing scanned old photos"
authors = ["Orell Bühler <me@orellbuehler.ch>"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/OrellBuehler/photo-archiver"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Opt-in GPU acceleration for ONNX inference; both fall back to CPU at runtime.
cuda = ["ort/cuda"]
directml = ["ort/directml"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
image = "0.25"
imageproc = "0.27"
walkdir = "2"
regex = "1"
anyhow = "1"
kamadak-exif = "0.6"
little_exif = "0.6"
ort = { version = "=2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
ureq = "3"
image_hasher = "3"
